fix : menu z-index수정

--- a/FrontEnd/src/assets/css/menu/menu.scss
+++ b/FrontEnd/src/assets/css/menu/menu.scss
@@ -8,6 +8,7 @@
   text-align: center;
   box-sizing: border-box;
   font-size: 2rem;
+  z-index:999;
 
   .menu-item,
   .menu-open-button {
